# mcp_docker

./: .bandit  .dockerignore  .env.example  .gitignore  .markdownlint.json  .mcp_keys.json.example  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPOSE_IMPLEMENTATION_ROADMAP.md  COMPOSE_TECHNICAL_SPEC.md  COMPOSE_TESTING_STRATEGY.md  CONFIGURATION.md  CONTRIBUTING.md  CRITICAL_BUGS_FIXED.md  DEVELOPMENT.md  DOCKER_COMPOSE_IMPLEMENTATION_PLAN.md  DOCKER_COMPOSE_PLAN.md  FASTMCP_MIGRATION.md  FINAL_IMPLEMENTATION_SUMMARY.md  FUZZING_TEST_RESULTS.md  ISSUE_ANALYSIS.md  ISSUE_FIX_SUMMARY.md  PLAN.md  README.md  SECURITY.md  SECURITY_IMPLEMENTATION.md  SUPPORT.md  TESTING_CHECKLIST.md  TESTING_SECURITY.md  VERIFIED_ISSUES.md  VERSION_TRACKING.md  codecov.yml  opus_code_review.md  pyproject.toml  security_review_claude.md  security_review_gemini.md  security_review_gpt-5.md  (+8 more)
.claude/: settings.local.json
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml  security.yml
.github/codeql/: codeql-config.yml
.github/requirements/: bandit.txt  pre-commit.txt
.github/workflows/: bandit.yml  cflite.yml  ci-dependency-review.yml  ci.yml  claude-code-review.yml  claude.yml  codeql.yml  coverage-badge.yml  dependency-review.yml  docs.yml  license-compliance.yml  pages.yml  pre-commit.yml  release.yml  scorecard.yml  sonarcloud.yml  stale.yml
compose_files/: README.md  nginx-redis.yml  postgres-pgadmin.yml  simple-webapp.yml
docs/: API.md  ARCHITECTURE.md  EXAMPLES.md  FUZZING.md  INTEGRATION_TESTING.md  README.cy.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.pl.md  README.pt.md  README.uk.md  README.zh.md  SETUP.md  SSH_AUTHENTICATION.md  TESTING.md  _config.yml  index.md
docs/examples/: httpstream-config.md
examples/: ssh_auth_client.py  ssh_auth_mcp_client.py
examples/env/: .env.destructive  .env.list_containers_only  .env.moderate  .env.oauth  .env.one_prompt  .env.one_resource  .env.safe
examples/scripts/: common.sh  start_http_server_destructive.sh  start_http_server_list_containers_only.sh  start_http_server_moderate.sh  start_http_server_one_prompt.sh  start_http_server_one_resource.sh  start_http_server_safe.sh
scripts/: check_cognitive_complexity.py  generate_api_key.py  setup_ssh_auth.sh
src/mcp_docker/: __init__.py  __main__.py  config.py  event_store.py  fastmcp_prompts.py  fastmcp_resources.py  fastmcp_server.py  py.typed  server.py  version.py
src/mcp_docker/auth/: __init__.py  api_key.py  middleware.py  models.py  oauth_auth.py  ssh_auth.py  ssh_keys.py  ssh_signing.py  ssh_wire.py
src/mcp_docker/compose_wrapper/: __init__.py  client.py
src/mcp_docker/docker/: __init__.py  client.py
src/mcp_docker/docker_wrapper/: __init__.py  client.py  compose_client.py
src/mcp_docker/fastmcp_tools/: __init__.py  common.py  container_inspection.py  container_lifecycle.py  filters.py  image.py  network.py  registration.py  registry.py  system.py  volume.py
src/mcp_docker/middleware/: __init__.py  audit.py  auth.py  debug_logging.py  error_handler.py  rate_limit.py  safety.py  utils.py
src/mcp_docker/prompts/: __init__.py  base.py  templates.py
src/mcp_docker/resources/: __init__.py  base.py  providers.py
src/mcp_docker/safety/: __init__.py  core.py
src/mcp_docker/security/: __init__.py  audit.py  rate_limiter.py
src/mcp_docker/server/: __init__.py  prompts.py  resources.py  server.py
src/mcp_docker/services/: __init__.py  audit.py  rate_limiter.py  safety.py  safety_enforcer.py
src/mcp_docker/tools/: __init__.py  base.py  common.py  compose_base.py  compose_tools.py  container_inspection.py  container_inspection_tools.py  container_lifecycle.py  container_lifecycle_tools.py  container_tools.py  filters.py  image.py  network.py  (+8 more)
tests/: __init__.py  conftest.py  test_safety_enforcement.py
tests/e2e/: README_E2E_TESTS.md  __init__.py  helpers.py  test_httpstream_stress_and_security.py  test_httpstream_transport_e2e.py  test_network_workflow_e2e.py  test_protocol_validation_e2e.py  test_safety_enforcement_e2e.py  test_sse_transport_e2e.py  test_ssh_auth_true_e2e.py  test_volume_workflow_e2e.py
tests/fixtures/: __init__.py
tests/fuzz/: __init__.py  fuzz_error_sanitizer.py  fuzz_json_parsing.py  fuzz_safety.py  fuzz_ssh_auth.py  fuzz_validation.py
tests/integration/: __init__.py  test_api_key_auth_integration.py  test_compose_operations.py  test_container_lifecycle.py  test_fastmcp_server.py  test_image_operations.py  test_mcp_server.py  test_network_operations.py  test_phase5_integration.py  test_resources_prompts_safety_integration.py  test_safety_features.py  test_ssh_auth_integration.py  test_ssh_auth_server_integration.py  test_volume_operations.py
tests/performance/: __init__.py  test_benchmarks.py
tests/unit/: __init__.py  test_audit_redaction.py  test_auth_middleware.py  test_auth_models.py  test_base_tool.py  test_compose_base.py  test_compose_simple_coverage.py  test_compose_tools.py  test_compose_validation.py  test_compose_wrapper.py  test_compose_wrapper_coverage.py  test_config.py  test_config_prompt_resource_defaults.py  test_container_tools.py  test_debug_logging_middleware.py  test_docker_client.py  test_error_handler_middleware.py  test_error_sanitizer.py  test_errors.py  test_event_store.py  test_fastmcp_helpers.py  test_fastmcp_prompts.py  test_fastmcp_resources.py  test_fastmcp_server.py  test_fastmcp_tool_execution.py  test_fastmcp_tool_registration.py  test_fastmcp_tools_combined_metadata.py  test_fastmcp_tools_container_inspection.py  test_fastmcp_tools_container_lifecycle.py  test_fastmcp_tools_image.py  test_fastmcp_tools_network.py  test_fastmcp_tools_slim.py  test_fastmcp_tools_system.py  test_fastmcp_tools_volume.py  test_http_helpers.py  test_httpstream_config.py  test_image_tools.py  test_ip_security.py  test_log_sanitizer.py  test_logger.py  (+24 more)
(+33 files in other folders)
