[project]
name = "mcp-docker"
version = "1.2.0"
description = "Model Context Protocol server for Docker management with AI assistants"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "James Williams" }
]
keywords = [
    "mcp",
    "docker",
    "model-context-protocol",
    "ai",
    "claude",
    "containers",
    "docker-management",
    "llm",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "fastmcp>=2.0.0",  # FastMCP 2.0
    "docker>=7.1.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "loguru>=0.7.0",
    "starlette>=0.50.0",
    "uvicorn>=0.38.0",
    "limits>=5.6.0",
    "cachetools>=6.2.1",
    "secure>=1.0.1",
    "authlib>=1.6.5",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-docker>=3.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.6.0",
    "types-docker>=7.1.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "hypothesis>=6.0.0",
    "atheris>=2.3.0",  # Fuzzing with ClusterFuzzLite (Apache-2.0)
]

[project.urls]
Homepage = "https://github.com/williajm/mcp_docker"
Documentation = "https://williajm.github.io/mcp_docker/"
Repository = "https://github.com/williajm/mcp_docker"
PyPI = "https://pypi.org/project/mcp-docker/"
Issues = "https://github.com/williajm/mcp_docker/issues"
Changelog = "https://github.com/williajm/mcp_docker/releases"

[project.scripts]
mcp-docker = "mcp_docker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_docker"]

[tool.hatch.build.targets.sdist]
# Explicitly exclude all development, CI, and config files
exclude = [
    ".gitignore",
    ".git",
    ".github",
    ".clusterfuzzlite",
    ".python-version",
    ".pre-commit-config.yaml",
    "codecov.yml",
    "sonar-project.properties",
    "uv.lock",
    "start_sse_server.sh",
    "docs/_config.yml",
    "AGENTS.md",
    "CLAUDE.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RET",   # flake8-return
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate
    "PL",    # pylint
    "PERF",  # perflint
]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests need flexibility for fixtures, long assertions, and test-specific patterns
"tests/**/*.py" = [
    "ARG",      # Unused arguments (fixtures may require args for setup)
    "PLR2004",  # Magic values (acceptable in test assertions)
    "E501",     # Line length (test assertions can be long for readability)
    "PLC0415",  # Import at top-level (tests may need conditional imports)
    "SIM105",   # Use contextlib.suppress (explicit try-except-pass is clearer in tests)
    "SIM117",   # Single with statement (separate context managers are more readable)
    "PLR0915",  # Too many statements (integration/E2E tests naturally have many steps)
    "ERA001",   # Commented code (tests sometimes keep old approaches as documentation)
]
# Fuzz tests use Atheris conventions (TestOneInput is required entry point)
"tests/fuzz/**/*.py" = [
    "N802",     # TestOneInput function name is required by Atheris fuzzing framework
]
# Main entry point has complex SSE server setup
"src/mcp_docker/__main__.py" = [
    "PLR0915",  # Too many statements (run_sse function sets up complex middleware stack)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic_settings.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "loguru.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastmcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "starlette.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hypothesis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "atheris.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "limits.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "secure.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "authlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cachetools.*"
ignore_missing_imports = true

# Relax strict typing for test files (Mock objects, test fixtures, etc.)
[[tool.mypy.overrides]]
module = "tests.*"
# Disable strict checks that don't work well with Mock objects and test fixtures
disable_error_code = ["attr-defined", "no-untyped-call", "arg-type", "type-arg"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring Docker",
    "e2e: End-to-end tests with realistic scenarios",
    "slow: Slow running tests (but still functional)",
    "stress: Stress/performance tests (high resource usage, skip in CI)",
    "fuzz: Fuzz tests (run by ClusterFuzzLite)",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[dependency-groups]
dev = [
    "atheris>=2.3.0",
    "coverage>=7.11.0",
    "cryptography>=46.0.3",  # Needed for TLS certificate generation in E2E tests
    "hypothesis>=6.147.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-docker>=3.2.3",
    "ruff>=0.14.2",
    "types-cachetools>=6.2.0.20251022",
    "types-docker>=7.1.0.20251009",
    "types-paramiko>=4.0.0.20250822",
    "types-requests>=2.32.4.20250913",
]
